# SGPR

./: CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: cube.cpp.F8721C2D30970A16.idx  spectralProof.cpp.5B1AF0E87D628244.idx  surface_normals.cpp.E6334836B4A0D4FF.idx
config/: config.json  test.json
data/: gfa_features.json
scripts/: gfa.txt  knn.py  kstest.py  semantic_aware.txt  semantic_unaware.txt
src/: cube.cpp  main.cpp  spectralProof.cpp  surface_normals.cpp
